[package]
name = "cetus"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/LeeSmet/cetus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
trust-dns-server = { version = "0.21", features = ["dns-over-https-rustls", "dns-over-rustls", "dnssec-ring"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
