[package]
name = "cetus"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/LeeSmet/cetus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
trust-dns-server = { version = "0.21", features = ["dns-over-https-rustls", "dns-over-rustls", "dnssec-ring"] }
# this is only here because the feature is not exposed through the server crate
trust-dns-proto = { version = "0.21", features = ["serde-config"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
log = "0.4"
pretty_env_logger = "0.4"
